// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`semi.js - {"arrowParens":"always","semi":false} format 1`] = `
====================================options=====================================
arrowParens: "always"
parsers: ["babel", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
a => {}

=====================================output=====================================
;(a) => {}

================================================================================
`;

exports[`semi.js - {"arrowParens":"avoid","semi":false} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
parsers: ["babel", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
a => {}

=====================================output=====================================
a => {}

================================================================================
`;
